@@ -3274,18 +3274,16 @@ TclReToGlob(
     Tcl_DStringInit(dsPtr);
 
     /*
-     * Write to the ds directly without the function overhead.
-     * An equivalent glob pattern can be no more than reStrLen+2 in size.
-     */
-
-    Tcl_DStringSetLength(dsPtr, reStrLen + 2);
-    dsStr = dsStrStart = Tcl_DStringValue(dsPtr);
-
-    /*
      * "***=xxx" == "*xxx*", watch for glob-sensitive chars.
      */
 
     if ((reStrLen >= 4) && (memcmp("***=", reStr, 4) == 0)) {
+	/*
+	 * At most, the glob pattern has length 2*reStrLen + 2 to
+	 * backslash escape every character and have * at each end.
+	 */
+	Tcl_DStringSetLength(dsPtr, 2*reStrLen + 2);
+	dsStr = dsStrStart = Tcl_DStringValue(dsPtr);
 	*dsStr++ = '*';
 	for (p = reStr + 4; p < strEnd; p++) {
 	    switch (*p) {
@@ -3305,6 +3303,14 @@ TclReToGlob(
 	}
 	return TCL_OK;
     }
+
+    /*
+     * At most, the glob pattern has length reStrLen + 2 to account
+     * for possible * at each end.
+     */
+
+    Tcl_DStringSetLength(dsPtr, reStrLen + 2);
+    dsStr = dsStrStart = Tcl_DStringValue(dsPtr);
 
     /*
      * Check for anchored REs (ie ^foo$), so we can use string equal if
